# learnOpenGL

./: .gitignore  readme.md
01-window-and-triangle/: window-and-triangle.cpp
02-modern-opengl-with-glew/: modern-opengl-with-glew.cpp
03-vertex-buffers-and-drawing-a-triangle/: vertex-buffer-triangle.cpp
04-dealing-with-shaders/res/shaders/: Basic.shader
04-dealing-with-shaders/src/: vertex-buffer-triangle.cpp
05-index-buffers/src/: vertex-buffer-triangle.cpp
06-opengl-errors/src/: vertex-buffer-triangle.cpp
07-uniforms/src/: vertex-buffer-triangle.cpp
08-vertex-arrays/src/: vertex-buffer-triangle.cpp
09-abstracting/res/shaders/: Basic.shader
09-abstracting/src/: Renderer.cpp  Renderer.h  Shader.h  VertexArray.cpp  VertexBufferLayout.h  main.cpp  vertex-buffer-triangle.cpp
10-textures/res/shaders/: Basic.shader
10-textures/src/: Shader.cpp  Shader.h  Texture.cpp  main.cpp
11-math/src/: Shader.h  VertexArray.cpp  main.cpp
12-imgui/res/shaders/: Basic.shader
12-imgui/src/: main.cpp
13-multiple-objects/: CMakeLists.txt
13-multiple-objects/src/: IndexBuffer.cpp  IndexBuffer.h  Texture.h  VertexArray.h  main.cpp
14-test-framework/: CMakeLists.txt
14-test-framework/src/: Shader.cpp  Texture.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
14-test-framework/src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
